Eliminate all FindBugs errors in GridCmd